<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/rl_profile_page_margin_start"
        android:layout_marginTop="@dimen/rl_profile_page_margin_top"
        android:layout_marginEnd="@dimen/rl_profile_page_margin_end">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="@dimen/iv_profile_page_margin_end"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/userImage"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/userImage"
                android:text="@string/main_page_tv_name"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/tv_profile_page_text_size" />

            <EditText
                android:background="@drawable/edittext"
                android:id="@+id/userNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewName"
                android:layout_toRightOf="@id/userImage"
                android:hint="@string/main_page_ed_name"
                android:textColor="@color/light_black" />


            <TextView
                android:id="@+id/textViewSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userNameET"
                android:layout_toRightOf="@id/userImage"
                android:text="@string/main_page_tv_surname"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/tv_profile_page_text_size" />

            <EditText
                android:id="@+id/userSurnameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:layout_below="@id/textViewSurname"
                android:layout_toRightOf="@id/userImage"
                android:hint="@string/main_page_ed_surname"
                android:textColor="@color/light_black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitDataProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:layout_marginHorizontal="@dimen/button_sign_in_margin_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/buttonvalues"
                android:text="Prześlij"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userImage"
            android:layout_marginTop="24dp"
            android:text="@string/main_page_tv_email"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/tv_profile_page_text_size" />

        <EditText
            android:id="@+id/userEmailET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewEmail"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="1dp"
            android:textColor="@color/black"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/edittext"
            android:hint="@string/main_page_ed_email"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/userEmailET"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Produkty na sprzedaż"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="italic|bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerFavCars"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-9dp"
                android:background="@android:color/transparent"
                tools:listitem="@layout/list_row" />

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>